--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.gungde.reminder_medicine"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -20,12 +20,32 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+
+    //firebase
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.1'
+    implementation 'com.google.firebase:firebase-database:15.0.1'
+    implementation 'com.google.firebase:firebase-storage:15.0.2'
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+
+    //vendor
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.iceteck.silicompressorr:silicompressor:2.1'
+    implementation 'com.github.amanjeetsingh150:ImageZipper:1.3'
+    implementation 'id.zelory:compressor:2.0.0'
 
     //service
     implementation 'com.amitshekhar.android:android-networking:1.0.1'
@@ -35,6 +55,7 @@ dependencies {
 
     // code generator for view
     implementation "com.jakewharton:butterknife:8.8.1"
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
 
     testImplementation 'junit:junit:4.12'
@@ -48,7 +69,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 }
-
+apply plugin: 'com.google.gms.google-services'
 configurations.all {
     resolutionStrategy.force "com.android.support:support-annotations:27.1.1"
 }
