--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,16 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Home"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+           />
 
         <service
             android:name=".utils.AlarmService"
@@ -26,7 +36,7 @@
         <activity
             android:name=".Splash"
             android:label="@string/title_activity_splash"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,39 +46,50 @@
         <activity
             android:name=".Aturobat"
             android:label="@string/title_activity_aturobat"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
         <activity
-            android:name=".Beranda"
-            android:label="@string/title_activity_beranda"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".Menu"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoActionBar" />
+             />
         <activity
             android:name=".Daftar"
             android:label="@string/title_activity_daftar"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
         <activity
             android:name=".Report"
             android:label="@string/title_activity_report"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
         <activity
             android:name=".Minumobat"
             android:label="@string/title_activity_minumobat"
-            android:theme="@style/AppTheme.NoActionBar" />
+             />
         <activity
             android:name=".Reward"
             android:label="@string/title_activity_reward"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
         <activity
             android:name=".Badreward"
             android:label="@string/title_activity_badreward"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            />
+        <activity android:name=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
