--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,18 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.2.0'
     }
+
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
         maven { url "https://jitpack.io" }
     }
 }
