--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gungde.reminder_medicine">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -33,6 +34,20 @@
 
         <receiver android:name=".utils.AlarmReceiver" />
 
+        <activity android:name=".ActivityChats.AcountSettings" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".ActivityChats.ChangeStatus" />
+        <activity android:name=".ActivityChats.AllUserActivity" />
+        <activity android:name=".ActivityChats.ProfilActivity" />
+        <activity android:name=".ActivityChats.UserDetail" />
+        <activity android:name=".ActivityChats.ChatsRoom" />
+
+
+
+        <activity android:name=".ActivityChats.ImageDetail" />
+
         <activity
             android:name=".Splash"
             android:label="@string/title_activity_splash"
@@ -56,13 +71,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-        <activity
-            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
-        <activity
-            android:name=".Menu"
-            android:label="@string/title_activity_menu"
-            />
+
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login"
